# deps-cop

./: .editorconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-release.yml  packagecloud-deb.yml  winget-pr.yml
docs/: USER_GUIDE.md
examples/: depscoprc_01.json  depscoprc_02.json
manifests/tecnocrata/depscop/: depscop.yaml
manifests/winget/: depscop.yaml
src/: configuration.rs  graph.rs  lib.rs  main.rs  namespaces.rs  projects.rs  static_output.rs  stringsutils.rs
src/analyzers/: mod.rs
src/analyzers/csharp/: mod.rs  namespace.rs  project.rs
src/config/: loader.rs  mod.rs  patterns.rs  types.rs
src/core/: analysis.rs  dependencies.rs  mod.rs  node.rs
src/output/: graphviz.rs  mermaid.rs  mod.rs  static_output.rs
src/output/html/: mod.rs
src/utils/: fs.rs  mod.rs  strings.rs
