[package]
name = "depscop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2.10"
chrono = "0.4"
figment = { version = "0.10", features = ["toml", "json"] }
glob = "0.3.1"
path-slash = "0.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0"
serde-xml-rs = "0.6.0"
walkdir = "2.3"