[package]
name = "depscop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # Major update from 3.2
chrono = { version = "0.4.31", features = ["serde"] }  # Add serde feature
figment = { version = "0.10.12", features = ["toml", "json"] }
glob = "0.3.1"
path-slash = "0.2.1"  # Update from 0.1
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"  # Match serde version
serde_json = "1.0.108"
serde-xml-rs = "0.6.0"
walkdir = "2.4.0"
